--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,13 @@
 body {
   background: linear-gradient(to bottom, #d90429, #ef233c);
+  height: max-content;
+}
+@media (min-width: 1024px) {
+  main {
+    margin: 10 10 10 10;
+    padding: 30px;
+    background-color: #edf2f4;
+  }
 }
 #app {
   font-family: "Roboto", sans-serif;
@@ -7,11 +15,9 @@ body {
   margin-top: 20px;
 }
 main {
-  margin: 0 auto;
-  padding: 30px;
-  background-color: white;
-  width: 1024px;
-  min-height: 300px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+  background-color: #edf2f4;
 }
 h1 {
   margin: 40px 0 0;
