arreglos en la vista

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,35 +1,114 @@
+html,
 body {
   background: linear-gradient(to bottom, #d90429, #ef233c);
-  height: max-content;
-}
-@media (min-width: 1024px) {
-  main {
-    margin: 10 10 10 10;
-    padding: 30px;
-    background-color: #edf2f4;
-  }
+  min-height: 100vh;
 }
 #app {
-  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: "Noto Sans", sans-serif;
+  justify-content: space-between;
+  min-height: 100vh;
+  padding-top: 20px;
   text-align: center;
-  margin-top: 20px;
 }
-main {
-  margin: 10px 10px 10px 10px;
-  padding: 10px 10px 10px 10px;
-  background-color: #edf2f4;
+.home {
+  background-color: #faf6f6;
+  margin: 10px;
+  padding: 10px;
 }
-h1 {
-  margin: 40px 0 0;
+.home-img{
+  width: 60%;
+  margin-bottom: 10px;
 }
-ul {
-  list-style-type: none;
-  padding: 0;
+.pokedexter {
+  width: 100%;
 }
-li {
-  display: inline-block;
-  margin: 0 10px;
+.img-search {
+  filter: invert(100%) sepia(17%) saturate(7047%) hue-rotate(179deg)
+    brightness(110%) contrast(91%);
+  width: 15px;
 }
-a {
-  color: #42b983;
+.link-helper {
+  background-color: transparent;
+  border-color: rgba(0, 116, 236, 0.929412);
+  border-style: none;
+  color: rgba(0, 116, 236, 0.929412);
+  cursor: pointer;
+}
+.pokemon-img {
+  background-color: #cccccc;
+}
+.pokemon_name_id {
+  justify-content: space-around;
+}
+h4 {
+  color: red;
+  font-style: italic;
+}
+.pokemon-info {
+  font-size: 150%;
+  font-weight: 400;
+}
+.pokemon-info-span {
+  color: #585858;
+  font-size: 150%;
+  font-weight: 400;
+}
+.table {
+  background-color: #cccccc;
+}
+footer {
+  background-color: #2b2d42;
+  color: #cccccc;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  width: 100%;
+}
+.footer-img {
+  width: 25%;
+}
+.carousel {
+  margin-bottom: 5px;
+}
+
+@media (min-width: 768) {
+  .pokemon_name_id {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .footer-img {
+    width: 5%;
+  }
+  .carousel {
+    margin-bottom: 5px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #app {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  main {
+    margin: 10px;
+    padding: 30px;
+  }
+  .home-img{
+    width: 30%;
+    margin-bottom: 10px;
+  }
+  .footer-img {
+    width: 10%;
+  }
+  .carousel {
+    margin-bottom: 5px;
+    width: 50%;
+  }
+  .err {
+    width: 60%;
+  }
 }
